# rust-llama3-onnx

./: Cargo.toml  README.md
src/: main.rs
